--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Yu-Siang Huang"
-  avatar           : "suzhou.JPG"
+  avatar           : "IMG_2931.JPG"
   bio              : "Just do it"
   location         : "Taiwan"
   employer         :
