--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "YSHuang"
-title_separator          : "-"
+title                    : ""
+title_separator          : ""
 name                     : &name "Yu-Siang Huang"
 description              : &description "personal description"
 url                      : https://remyhuang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
