--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : ""
+title                    : "YSHuang"
 title_separator          : ""
 name                     : &name "Yu-Siang Huang"
 description              : &description "personal description"
