--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 locale                   : "en-US"
 title                    : "YSHuang"
-title_separator          : ""
+title_separator          : "-"
 name                     : &name "Yu-Siang Huang"
 description              : &description "personal description"
 url                      : https://remyhuang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
