--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/yu-siang-huang-b88669141/"
   orcid            : 
   pinterest        :
   soundcloud       :
