--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,4 +8,6 @@ main:
    
   - title: "Music Puzzle Game"
     url: /music_puzzle_game/
-   
+
+  - title: "Music Generation"
+    url: /music_generation/
