--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
-main:
-  - title: "Music Thumbnailing"
-    url: /music_thumbnailing/
+# main:
+#   - title: "Music Thumbnailing"
+#     url: /music_thumbnailing/
    
-  - title: "Music Puzzle Game"
-    url: /music_puzzle_game/
+#   - title: "Music Puzzle Game"
+#     url: /music_puzzle_game/
