--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Yu-Siang Huang"
+  name             : ""
   avatar           : "IMG_29311.jpg"
   bio              : "Just do it"
   location         : "Taiwan"
