--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : ""
+title                    : "Yu-Siang (Remy) Huang"
 title_separator          : "-"
 name                     : ""
 description              : &description "personal description"
