--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   location         : "Taiwan"
   employer         :
   googlescholar    : "https://scholar.google.com.tw/citations?user=QA28Z3wAAAAJ"
-  email            : 
+  email            : "sm840816@gmail.com"
   uri              : 
   bitbucket        :
   codepen          :
